force-app/main/default/objects/Account/fields/Enqix_Location_Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Location_Delivery_ID__c</fullName>
    <label>Enqix Location Delivery ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>