force-app/main/default/objects/Account/fields/Enqix_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Location_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The location Id from Enqix system</description>
    <externalId>true</externalId>
    <inlineHelpText>The location Id assigned in Enqix system</inlineHelpText>
    <label>Enqix Location ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>