force-app/main/default/objects/Account/fields/Enqix_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Payment_Method__c</fullName>
    <label>Enqix Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Credit Card Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>