force-app/main/default/objects/Account/fields/Enqix_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Price_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Change</label>
    <type>Checkbox</type>
</CustomField>