force-app/main/default/objects/Account/fields/Enqix_PriceReviewDate__c.field-meta.xml
<CustomField>
    <fullName>Enqix_PriceReviewDate__c</fullName>
    <label>PriceReviewDate</label>
    <type>DateTime</type>
</CustomField>