force-app/main/default/objects/Account/fields/Enqix_ReasonMarkedDead__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ReasonMarkedDead__c</fullName>
    <label>Enqix ReasonMarkedDead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed down</fullName>
                <label>Site Closed down</label>
            </value>
            <value>
                <fullName>Included in service charge</fullName>
                <label>Moved to a serviced office</label>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Poor Customer Support</fullName>
            </value>
            <value>
                <fullName>Delivery Issues</fullName>
            </value>
            <value>
                <fullName>Collection Reliability Issues</fullName>
            </value>
            <value>
                <fullName>Missing Features</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
                <label>Reseller Lost Work/Internalised</label>
            </value>
            <value>
                <fullName>FM Terminated</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>