force-app/main/default/objects/Account/fields/Enqix_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Start_Date__c</fullName>
    <label>Enqix Start Date</label>
    <type>Date</type>
</CustomField>