force-app/main/default/objects/Account/fields/Enqix_Statement_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Statement_Delivery_Method__c</fullName>
    <defaultValue>IF( $RecordType.Name = &quot;Account&quot;, &quot;Email&quot;, null)</defaultValue>
    <label>Statement Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>