force-app/main/default/objects/Account/fields/Escalation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Stage__c</fullName>
    <label>Escalation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>