force-app/main/default/objects/Account/fields/Estate__c.field-meta.xml
<CustomField>
    <fullName>Estate__c</fullName>
    <description>This is a field used for reporting purposes to be able to tag a location to an estate.</description>
    <label>Estate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estate</valueSetName>
    </valueSet>
</CustomField>