force-app/main/default/objects/Account/fields/Expected_Sales_Category__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Category__c</fullName>
    <inlineHelpText>Choose the sales category you expect this new location to be in based on annual spend or type
Key Account: Account Managed
Indirect: Indirect
Large: £10000 PA+
Medium: £1000 - £10000PA
Small: £1000 - £1000 PA
Micro: &lt;£100 PA</inlineHelpText>
    <label>Expected Sales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>