force-app/main/default/objects/Account/fields/External_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_ID__c</fullName>
    <label>External Unique ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>