force-app/main/default/objects/Account/fields/Fall_Back_Weight_Type__c.field-meta.xml
<CustomField>
    <fullName>Fall_Back_Weight_Type__c</fullName>
    <label>Fall Back Weight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Average Weight</fullName>
            </value>
            <value>
                <fullName>No Weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>