force-app/main/default/objects/Account/fields/Field_Person__c.field-meta.xml
<CustomField>
    <fullName>Field_Person__c</fullName>
    <label>Field Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>