force-app/main/default/objects/Account/fields/FieldsforDebtorReport1__c.field-meta.xml
<CustomField>
    <fullName>FieldsforDebtorReport1__c</fullName>
    <formula>Name&amp;&apos;-&apos;&amp;text(Enqix_Dead_Live__c)&amp;&apos;-&apos;&amp;text(Payment_Method__c)&amp;&apos;- Credit Days =&apos;&amp;text(CreditDays__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FieldsforDebtorReport1</label>
    <type>Text</type>
</CustomField>