force-app/main/default/objects/Account/fields/FinanceContactName__c.field-meta.xml
<CustomField>
    <fullName>FinanceContactName__c</fullName>
    <formula>FinanceContact__r.FirstName + &apos; &apos; + FinanceContact__r.LastName</formula>
    <label>Finance Contact Name</label>
    <type>Text</type>
</CustomField>