force-app/main/default/objects/Account/fields/FIRST_EVER_ORDER__c.field-meta.xml
<CustomField>
    <fullName>FIRST_EVER_ORDER__c</fullName>
    <label>FIRST EVER ORDER</label>
    <type>Date</type>
</CustomField>