force-app/main/default/objects/Account/fields/First_Ever_Order_updated__c.field-meta.xml
<CustomField>
    <fullName>First_Ever_Order_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Ever Order updated</label>
    <type>Checkbox</type>
</CustomField>