force-app/main/default/objects/Account/fields/First_Mile_Energy_Customer__c.field-meta.xml
<CustomField>
    <fullName>First_Mile_Energy_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Mile Energy Customer</label>
    <type>Checkbox</type>
</CustomField>