force-app/main/default/objects/Account/fields/First_Order_Multi_Stream__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Multi_Stream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field Sales wants a field to report on</description>
    <label>First Order Multi Stream</label>
    <type>Checkbox</type>
</CustomField>