force-app/main/default/objects/Account/fields/FirstCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>FirstCollectionDate__c</fullName>
    <label>First Collection Date</label>
    <type>Date</type>
</CustomField>