force-app/main/default/objects/Account/fields/FirstLiveDate__c.field-meta.xml
<CustomField>
    <fullName>FirstLiveDate__c</fullName>
    <label>First Live Date</label>
    <type>DateTime</type>
</CustomField>