force-app/main/default/objects/Account/fields/FirstPost__c.field-meta.xml
<CustomField>
    <fullName>FirstPost__c</fullName>
    <formula>LEFT( BillingPostalCode , FIND(&quot; &quot;,  BillingPostalCode ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPost</label>
    <type>Text</type>
</CustomField>