force-app/main/default/objects/Account/fields/Food_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Food_Exemption__c</fullName>
    <label>Food Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microfirm</fullName>
            </value>
            <value>
                <fullName>Landlord Managed</fullName>
            </value>
            <value>
                <fullName>Alternative Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>