force-app/main/default/objects/Account/fields/Friday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Friday_Collection__c</fullName>
    <label>Friday Collection</label>
    <summaryFilterItems>
        <field>Schedule__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Schedule__c.Friday_Collection__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>