force-app/main/default/objects/Account/fields/Future_DMR_Round__c.field-meta.xml
<CustomField>
    <fullName>Future_DMR_Round__c</fullName>
    <label>Future DMR Round</label>
    <length>30</length>
    <type>Text</type>
</CustomField>