force-app/main/default/objects/Account/fields/Future_GW_Round__c.field-meta.xml
<CustomField>
    <fullName>Future_GW_Round__c</fullName>
    <label>Future GW Round</label>
    <length>30</length>
    <type>Text</type>
</CustomField>