force-app/main/default/objects/Account/fields/Future_Outer_Round__c.field-meta.xml
<CustomField>
    <fullName>Future_Outer_Round__c</fullName>
    <label>Future Outer Round</label>
    <length>30</length>
    <type>Text</type>
</CustomField>