force-app/main/default/objects/Account/fields/gaconnector_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>