force-app/main/default/objects/Account/fields/Gets_bags_from_head_office__c.field-meta.xml
<CustomField>
    <fullName>Gets_bags_from_head_office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gets bags from head office</label>
    <type>Checkbox</type>
</CustomField>