force-app/main/default/objects/Account/fields/Group_Account__c.field-meta.xml
<CustomField>
    <fullName>Group_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Account</label>
    <type>Checkbox</type>
</CustomField>