force-app/main/default/objects/Account/fields/Had_a_ZWR_Stream_2019__c.field-meta.xml
<CustomField>
    <fullName>Had_a_ZWR_Stream_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had a ZWR Stream 2019</label>
    <type>Checkbox</type>
</CustomField>