force-app/main/default/objects/Account/fields/Has_a_central_order_point__c.field-meta.xml
<CustomField>
    <fullName>Has_a_central_order_point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has a central order point</label>
    <type>Checkbox</type>
</CustomField>