force-app/main/default/objects/Account/fields/has_ever_ordered_online__c.field-meta.xml
<CustomField>
    <fullName>has_ever_ordered_online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has ever ordered online</label>
    <type>Checkbox</type>
</CustomField>