force-app/main/default/objects/Account/fields/Has_Stripe_Saved_Card__c.field-meta.xml
<CustomField>
    <fullName>Has_Stripe_Saved_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Stripe Saved Card?</label>
    <type>Checkbox</type>
</CustomField>