force-app/main/default/objects/Account/fields/HubSpotForcefulSyncDate__c.field-meta.xml
<CustomField>
    <fullName>HubSpotForcefulSyncDate__c</fullName>
    <label>HubSpot Forceful Sync Date</label>
    <type>Date</type>
</CustomField>