force-app/main/default/objects/Account/fields/IgnorePOGroupingOnInvoicePDF__c.field-meta.xml
<CustomField>
    <fullName>IgnorePOGroupingOnInvoicePDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore PO Grouping on Invoice PDF?</label>
    <type>Checkbox</type>
</CustomField>