force-app/main/default/objects/Account/fields/Invoice_Equals_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Equals_Outstanding__c</fullName>
    <formula>Total_Invoice_Amount__c = Total_Outstanding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Equals Outstanding?</label>
    <type>Checkbox</type>
</CustomField>