force-app/main/default/objects/Account/fields/Is_bin_location__c.field-meta.xml
<CustomField>
    <fullName>Is_bin_location__c</fullName>
    <formula>IF( Count_Wheelie_collection__c&gt;0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is bin location?</label>
    <type>Checkbox</type>
</CustomField>