force-app/main/default/objects/Account/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <description>Verifies if it  is a new location (created less than a month ago: &lt;=).</description>
    <formula>IF(AND(RecordType.DeveloperName = &quot;Location&quot;, ISPICKVAL(Enqix_Dead_Live__c , &quot;Live&quot;), (TODAY() -  Realstart__c  &lt;= 30.0)) , 

IMAGE(&quot;http://www.vcas.in/content-image/new-badge-xxl.png&quot;, &quot;New&quot;, 42,42), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verifies if it  is a new location (created less than a month ago: &lt;=).</inlineHelpText>
    <label>Is New?</label>
    <type>Text</type>
</CustomField>