force-app/main/default/objects/Account/fields/IsBinCollectionAdvanceInvoiced__c.field-meta.xml
<CustomField>
    <fullName>IsBinCollectionAdvanceInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bin Collection Advance Invoiced?</label>
    <type>Checkbox</type>
</CustomField>