force-app/main/default/objects/Account/fields/IsBinRentalExempt__c.field-meta.xml
<CustomField>
    <fullName>IsBinRentalExempt__c</fullName>
    <formula>AND(RecordTypeName__c = &apos;Account&apos;, OR(No_Bin_Rental__c, NOT(ISBLANK(Account_Manager__c))))</formula>
    <label>Bin Rental Exempt?</label>
    <type>Checkbox</type>
</CustomField>