force-app/main/default/objects/Account/fields/IsCouncilUpdatedViaDoogle__c.field-meta.xml
<CustomField>
    <fullName>IsCouncilUpdatedViaDoogle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Council Updated via Doogle?</label>
    <type>Checkbox</type>
</CustomField>