force-app/main/default/objects/Account/fields/IsDeliveryChargeExempt__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryChargeExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Charge Exempt?</label>
    <type>Checkbox</type>
</CustomField>