force-app/main/default/objects/Account/fields/IsDeliveryChargeExemptLocation__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryChargeExemptLocation__c</fullName>
    <formula>AND(RecordType.Name == &apos;Location&apos;, OR(IsDeliveryChargeExempt__c, Parent.IsDeliveryChargeExempt__c))</formula>
    <label>Delivery Charge Exempt Location?</label>
    <type>Checkbox</type>
</CustomField>