force-app/main/default/objects/Account/fields/IsExcludeDeliveryByExternalCarrier__c.field-meta.xml
<CustomField>
    <fullName>IsExcludeDeliveryByExternalCarrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Delivery By External Carrier?</label>
    <type>Checkbox</type>
</CustomField>