force-app/main/default/objects/Account/fields/IsFuelSurchargeExempt__c.field-meta.xml
<CustomField>
    <fullName>IsFuelSurchargeExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Surcharge Exempt?</label>
    <type>Checkbox</type>
</CustomField>