force-app/main/default/objects/Account/fields/IsFuelSurchargeExemptLocation__c.field-meta.xml
<CustomField>
    <fullName>IsFuelSurchargeExemptLocation__c</fullName>
    <formula>IF(RecordType.Name != &apos;Location&apos;, false, IF(IsFuelSurchargeExempt__c, true, Parent.IsFuelSurchargeExempt__c))</formula>
    <label>Fuel Surcharge Exempt Location?</label>
    <type>Checkbox</type>
</CustomField>