force-app/main/default/objects/Account/fields/IsIncludeInDeliveryPacking__c.field-meta.xml
<CustomField>
    <fullName>IsIncludeInDeliveryPacking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Delivery Packing?</label>
    <type>Checkbox</type>
</CustomField>