force-app/main/default/objects/Account/fields/IsInvoiceFrequencyOverride__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceFrequencyOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Frequency Override</label>
    <type>Checkbox</type>
</CustomField>