force-app/main/default/objects/Account/fields/IsLive__c.field-meta.xml
<CustomField>
    <fullName>IsLive__c</fullName>
    <formula>ISPICKVAL(Enqix_Dead_Live__c, &apos;Live&apos;)</formula>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>