force-app/main/default/objects/Account/fields/IsNational__c.field-meta.xml
<CustomField>
    <fullName>IsNational__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNational</label>
    <type>Checkbox</type>
</CustomField>