force-app/main/default/objects/Account/fields/IsOverweightChargesEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsOverweightChargesEnabled__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Account&apos;, NOT(No_Overweight_Charges__c),
IF(RecordType.DeveloperName == &apos;Location&apos;, AND(NOT(No_Overweight_Charges__c), NOT(Parent.No_Overweight_Charges__c)), false))</formula>
    <label>Overweight Charges?</label>
    <type>Checkbox</type>
</CustomField>