force-app/main/default/objects/Account/fields/IsOwnerOfSupplierGroup__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerOfSupplierGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner of Supplier Group?</label>
    <type>Checkbox</type>
</CustomField>