force-app/main/default/objects/Account/fields/IsStreetSegmentToBeRefreshed__c.field-meta.xml
<CustomField>
    <fullName>IsStreetSegmentToBeRefreshed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Street Segment to be refreshed?</label>
    <type>Checkbox</type>
</CustomField>