force-app/main/default/objects/Account/fields/IsTodaySendFirstCollectionEmail__c.field-meta.xml
<CustomField>
    <fullName>IsTodaySendFirstCollectionEmail__c</fullName>
    <formula>AND(RecordType.DeveloperName == &apos;Location&apos;,
OR(FirstCollectionDate__c + 1 =  TODAY(), FirstCollectionDate__c + 10 = TODAY()))</formula>
    <label>First Collection Send Email Today</label>
    <type>Checkbox</type>
</CustomField>