force-app/main/default/objects/Account/fields/IsTodaySendScheduleConfirmationEmail__c.field-meta.xml
<CustomField>
    <fullName>IsTodaySendScheduleConfirmationEmail__c</fullName>
    <formula>DATEVALUE(FirstLiveDate__c) + 1 = TODAY()</formula>
    <label>Send Schedule Confirmation Email Today?</label>
    <type>Checkbox</type>
</CustomField>