force-app/main/default/objects/Account/fields/IsTodaySendWelcomeEmail__c.field-meta.xml
<CustomField>
    <fullName>IsTodaySendWelcomeEmail__c</fullName>
    <formula>DATEVALUE(FirstLiveDate__c) + 2 = TODAY()</formula>
    <label>Send Welcome Email Today?</label>
    <type>Checkbox</type>
</CustomField>