force-app/main/default/objects/Account/fields/IsVATExemptLocation__c.field-meta.xml
<CustomField>
    <fullName>IsVATExemptLocation__c</fullName>
    <formula>OR(VAT_Exempt__c, Parent.VAT_Exempt__c)</formula>
    <label>VAT Exempt Location?</label>
    <type>Checkbox</type>
</CustomField>