force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <formula>IF( Account_ManagerLocation__c != NULL,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account?</label>
    <type>Checkbox</type>
</CustomField>