force-app/main/default/objects/Account/fields/KeyRefNumber__c.field-meta.xml
<CustomField>
    <fullName>KeyRefNumber__c</fullName>
    <description>Reference number to keep track of location keys</description>
    <label>KeyRefNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>