force-app/main/default/objects/Account/fields/KWH_Produced_L12M__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_L12M__c</fullName>
    <label>KWH Produced L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>