force-app/main/default/objects/Account/fields/LargeProspect__c.field-meta.xml
<CustomField>
    <fullName>LargeProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Prospect?</label>
    <type>Checkbox</type>
</CustomField>