force-app/main/default/objects/Account/fields/Last_Care_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Care_Call__c</fullName>
    <label>Last Care Call</label>
    <type>Date</type>
</CustomField>