force-app/main/default/objects/Account/fields/Last_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Date__c</fullName>
    <label>Last Case Date</label>
    <type>Date</type>
</CustomField>