force-app/main/default/objects/Account/fields/LastClearanceOrderDate__c.field-meta.xml
<CustomField>
    <fullName>LastClearanceOrderDate__c</fullName>
    <label>Last Clearance Order Date</label>
    <type>Date</type>
</CustomField>