force-app/main/default/objects/Account/fields/LastOrderDate__c.field-meta.xml
<CustomField>
    <fullName>LastOrderDate__c</fullName>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>