force-app/main/default/objects/Account/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Latitude</label>
    <precision>17</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>