force-app/main/default/objects/Account/fields/Linked_Group__c.field-meta.xml
<CustomField>
    <fullName>Linked_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Linked Group)</relationshipLabel>
    <relationshipName>Linked_Group</relationshipName>
    <type>Lookup</type>
</CustomField>