force-app/main/default/objects/Account/fields/Live_Partner_Locations__c.field-meta.xml
<CustomField>
    <fullName>Live_Partner_Locations__c</fullName>
    <label>Live Partner Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>