force-app/main/default/objects/Account/fields/Location_Classification__c.field-meta.xml
<CustomField>
    <fullName>Location_Classification__c</fullName>
    <formula>TEXT(Parent.Enqix_Classification__c)</formula>
    <inlineHelpText>Pulls in account size classification from parent account</inlineHelpText>
    <label>Location Classification</label>
    <type>Text</type>
</CustomField>