force-app/main/default/objects/Account/fields/Location_Covid_Open__c.field-meta.xml
<CustomField>
    <fullName>Location_Covid_Open__c</fullName>
    <formula>(IF(ISBLANK(TEXT(Open_during_Covid__c)), TEXT( Parent.Open_during_Covid__c ), TEXT(Open_during_Covid__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Open during Lockdown?</label>
    <type>Text</type>
</CustomField>