force-app/main/default/objects/Account/fields/Location_Covid_Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Covid_Reopen_Date__c</fullName>
    <formula>IF(ISBLANK( Covid_Reopen_Date__c ), (  Parent.Covid_Reopen_Date__c ), (Covid_Reopen_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Covid Reopen Date is blank on the Location then it will look at the Parent Account</inlineHelpText>
    <label>Location Covid Reopen Date</label>
    <type>Date</type>
</CustomField>