force-app/main/default/objects/Account/fields/Location_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Location_Payment_Method__c</fullName>
    <formula>TEXT(Parent.Enqix_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls in payment method from CP account</inlineHelpText>
    <label>Location Payment Method</label>
    <type>Text</type>
</CustomField>