force-app/main/default/objects/Account/fields/Location_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Service_Status__c</fullName>
    <formula>TEXT(Parent.Account_Service_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>pulls in service status (due to payment) from account - OK, cc only, suspended, stop</inlineHelpText>
    <label>Location Service Status</label>
    <type>Text</type>
</CustomField>