force-app/main/default/objects/Account/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <formula>IF( Number_of_Collections__c &gt; 0, &quot;Regular&quot;, &quot;Ad-Hoc&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Type</label>
    <type>Text</type>
</CustomField>